bookcard overflow bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,7 +44,7 @@ body {
 
 @media screen and (max-width: 1080px) {
     #bookCard {
-        margin-left: 1%;
+        /* margin-left: 1%; */
     }
 
     .style {
