--- a/client/src/pages/Donate/Donate.css
+++ b/client/src/pages/Donate/Donate.css
@@ -1,4 +1,6 @@
 #bookCard {
+    margin-left: 30%;
+    margin-right: 10%;
 }
 
 .style {
